# mcp-dataset-scalyr

./: .env.example  Dockerfile  README.md  kmcp.yaml  pyproject.toml
src/: main.py
src/core/: __init__.py  utils.py
src/tools/: __init__.py  dataset_scalyr_query.py
tests/: test_dataset_scalyr_query.py  test_server.py  test_tools.py
